commit after removal of number-offset in qmd files and edit of hands-on exercise 4.

--- a/Hands-on_Ex/Hands-on_Ex02/Hands-on_Ex02a.qmd
+++ b/Hands-on_Ex/Hands-on_Ex02/Hands-on_Ex02a.qmd
@@ -4,7 +4,6 @@ author: "Ho Zi Jun"
 date: "Aug 28, 2024"
 date-modified: "last-modified"
 number-sections: true
-number-offset: 2
 execute:
   eval: true
   echo: true
@@ -13,7 +12,7 @@ execute:
 editor: source
 ---
 
-# Spatial Point Pattern Analysis
+# 1st Order Spatial Point Pattern Analysis
 
 ## Overview
 
