--- a/Hands-on_Ex/Hands-on_Ex02/Hands-on_Ex02b.qmd
+++ b/Hands-on_Ex/Hands-on_Ex02/Hands-on_Ex02b.qmd
@@ -4,7 +4,6 @@ author: "Ho Zi Jun"
 date: "1 Sep, 2024"
 date-modified: "last-modified"
 number-sections: true
-number-offset: 3
 execute:
   eval: true
   echo: true
@@ -13,7 +12,7 @@ execute:
 editor: source
 ---
 
-# Spatial Point Pattern Analysis
+# 2nd Order Spatial Point Pattern Analysis
 
 ## Overview
 
