--- a/Hands-on_Ex/Hands-on_Ex04/Hands-on_Ex04.qmd
+++ b/Hands-on_Ex/Hands-on_Ex04/Hands-on_Ex04.qmd
@@ -4,7 +4,6 @@ author: "Ho Zi Jun"
 date: "Sep 15, 2024"
 date-modified: "last-modified"
 number-sections: true
-number-offset: 4
 execute:
   eval: true
   echo: true
@@ -302,6 +301,7 @@ table(hunan$County, card(wm_d62))
 n_comp <- n.comp.nb(wm_d62)
 n_comp$nc
 ```
+
 ```{r}
 table(n_comp$comp.id)
 ```
@@ -328,20 +328,327 @@ plot(hunan$geometry, border = "lightgrey", main = "Distance link")
 plot(wm_d62, coords, add = TRUE, pch = 19, cex = 0.6)
 ```
 
+### Computing adaptive distance weight matrix
+
+One of the characteristics of fixed distance weight matrix is that the more densely settled areas (usually the urban areas) tend to have more neighbours and the less densely settled areas (usually the rural counties) tend to have lesser neighbours. Having many neighbours soothes the neighbour relationship across more neighbours.
+
+It is possible to control the numbers of neighbours directly using k-nearest neighbours, either accepting asymmetric neighbours or imposing symmetry as shown in the code chunk below.
+
+```{r}
+knn6 <- knn2nb(knearneigh(coords, k=6))
+knn6
+```
+
+Similarly, the content of the matrix can be displayed by using `str()`.
+
+```{r}
+str(knn6)
+```
+
+::: callout-note
+Notice that each county has six neighbours, no less no more!
+:::
+
+#### Plotting distance based neighbours
+
+We can plot the weight matrix using the code chunk below.
+
+```{r}
+plot(hunan$geometry, border = "lightgrey")
+plot(knn6, coords, pch = 19, cex = 0.6, add = TRUE, col = "red")
+```
+
+## Weights based on IDW
+
+This section will show how to derive a spatial weight matrix based on Inverse Distance method. Firstly, to compute the distances between areas by using [*nbdists()*](https://r-spatial.github.io/spdep/reference/nbdists.html) of **spdep**
+
+```{r}
+dist <- nbdists(wm_q, coords, longlat = TRUE)
+ids <- lapply(dist, function(x) 1/(x))
+ids
+```
+
+## Row-standardised Weights Matrix
+
+Next, we need to assign weights to each neighbouring polygon. In our case, each neighbouring polygon will be assigned equal weight (style=“W”). This is accomplished by assigning the fraction 1/(#ofneighbours) to each neighbouring county then summing the weighted income values.
+
+While this is the most intuitive way to summaries the neighbours’ values it has one drawback in that polygons along the edges of the study area will base their lagged values on fewer polygons thus potentially over- or under-estimating the true nature of the spatial autocorrelation in the data. For this example, we’ll stick with the style=“W” option for simplicity’s sake but note that other more robust options are available, notably style=“B”.
+
+```{r}
+rswm_q <- nb2listw(wm_q, style = "W", zero.policy = TRUE)
+rswm_q
+```
+
+The `zero.policy = TRUE` option allows for lists of non-neighbours. This should be used with caution since the user may not be aware of missing neighbours in their dataset however, a zero.policy of FALSE would return an error.
+
+To see the weight of the first polygon’s eight neighbours type:
+
+```{r}
+rswm_q$weights[10]
+```
+
+Each neighbour is assigned a value 0.125 of the total weight. This means that when R computes the average neighbouring income values, each neighbour’s income will be multiplied by 0.125 before being tallied.
+
+Using the same method, we can also derive a row standardised distance weight matrix by using the code chunk below.
+
+```{r}
+rswm_ids <- nb2listw(wm_q, glist = ids, style = "B", zero.policy = TRUE)
+rswm_ids
+```
+
+```{r}
+rswm_ids$weights[1]
+```
+
+Results of previous code chunk shown above.
+
+```{r}
+summary(unlist(rswm_ids$weights))
+```
+
+## Application of Spatial Weight Matrix
+
+In this section, it shows how to create four different spatial lagged variables, they are:
+
+-   spatial lag with row-standardized weights,
+-   spatial lag as a sum of neighbouring values,
+-   spatial window average, and
+-   spatial window sum.
+
+### Spatial lag with row-standardized weights
+
+Finally, we’ll compute the average neighbour GDPPC value for each polygon. These values are often referred to as **spatially lagged values**.
+
+```{r}
+GDPPC.lag <- lag.listw(rswm_q, hunan$GDPPC)
+GDPPC.lag
+```
+
+Recall in the previous section, we retrieved the GDPPC of these five countries by using the code chunk below:
+
+```{r}
+nb1 <- wm_q[[1]]
+nb1 <- hunan$GDPPC[nb1]
+nb1
+```
+
+We can append the spatially lag GDPPC values onto hunan sf data frame by using the code chunk below.
+
+```{r}
+lag.list <- list(hunan$NAME_3, lag.listw(rswm_q, hunan$GDPPC))
+lag.res <- as.data.frame(lag.list)
+colnames(lag.res) <- c("NAME_3", "lag GDPPC")
+hunan <- left_join(hunan,lag.res)
+```
+
+The following table shows the average neighboring income values (stored in the Inc.lag object) for each county.
+
+```{r}
+head(hunan)
+```
+
+Next, to plot both the GDPPC and spatial lag GDPPC for comparison using the code chunk below.
+
+```{r}
+#| fig-width: 10
+#| fig-height: 12
+gdppc <- qtm(hunan, "GDPPC")
+lag_gdppc <- qtm(hunan, "lag GDPPC")
+tmap_arrange(gdppc, lag_gdppc, asp = 1, ncol = 2)
+```
+
+### Spatial lag as a sum of neighboring values
+
+We can calculate spatial lag as a sum of neighbouring values by assigning binary weights. This requires us to go back to our neighbours list, then apply a function that will assign binary weights, then we use `glist = in the nb2listw` function to explicitly assign these weights.
+
+We start by applying a function that will assign a value of 1 per each neighbour. This is done with `lapply()`, which we have been using to manipulate the neighbours structure throughout the past notebooks. Basically it applies a function across each value in the neighbours structure.
+
+```{r}
+b_weights <- lapply(wm_q, function(x) 0*x + 1)
+b_weights2 <- nb2listw(wm_q, 
+                       glist = b_weights, 
+                       style = "B")
+b_weights2
+```
+
+With the proper weights assigned, we can use `lag.listw()` to compute a lag variable from our weight and GDPPC.
+
+```{r}
+lag_sum <- list(hunan$NAME_3, lag.listw(b_weights2, hunan$GDPPC))
+lag.res <- as.data.frame(lag_sum)
+colnames(lag.res) <- c("NAME_3", "lag_sum GDPPC")
+```
+
+First, to examine the result by using the code chunk below.
+
+```{r}
+lag_sum
+```
+
+Next, to append the *lag_sum* GDPPC field into `hunan` sf data frame by using the code chunk below.
+
+```{r}
+hunan <- left_join(hunan, lag.res)
+```
+
+Following which, to plot both the GDPPC and Spatial Lag Sum GDPPC for comparison using the code chunk below.
+
+```{r}
+#| fig-width: 10
+#| fig-height: 12
+gdppc <- qtm(hunan, "GDPPC")
+lag_sum_gdppc <- qtm(hunan, "lag_sum GDPPC")
+tmap_arrange(gdppc, lag_sum_gdppc, asp = 1, ncol = 2)
+```
+
+### Spatial window average
+
+The spatial window average uses row-standardized weights and includes the diagonal element. To do this in R, we need to go back to the neighbors structure and add the diagonal element before assigning weights.
+
+To add the diagonal element to the neighbour list, we just need to use `include.self()` from **spdep**.
+
+```{r}
+wm_qs <- include.self(wm_q)
+```
+
+Notice that the Number of non-zero links, Percentage non-zero weights and Average number of links are 536, 6.921488 and 6.090909 respectively as compared to wm_q of 448, 5.785124 and 5.090909
+
+Let us take a good look at the neighbour list of area [1] by using the code chunk below.
+
+```{r}
+wm_qs[[1]]
+```
+
+Notice that now [1] has six neighbours instead of five.
+
+Now we obtain weights with `nb2listw()`
+
+```{r}
+wm_qs <- nb2listw(wm_qs)
+wm_qs
+```
+
+Again, utilising `nb2listw()` and `glist()` to explicitly assign weight values.
+
+Lastly, we just need to create the lag variable from our weight structure and GDPPC variable.
+
+```{r}
+lag_w_avg_gpdpc <- lag.listw(wm_qs, 
+                             hunan$GDPPC)
+lag_w_avg_gpdpc
+```
+
+Next, to convert the lag variable listw object into a data.frame by using `as.data.frame()`.
+
+```{r}
+lag.list.wm_qs <- list(hunan$NAME_3, lag.listw(wm_qs, hunan$GDPPC))
+lag_wm_qs.res <- as.data.frame(lag.list.wm_qs)
+colnames(lag_wm_qs.res) <- c("NAME_3", "lag_window_avg GDPPC")
+```
+
+::: callout-note
+## Note
+The third command line on the code chunk above renames the field names of `lag_wm_q1.res` object into `NAME_3` and `lag_window_avg GDPPC` respectively.
+:::
+
+Next, the code chunk below will be used to append *lag_window_avg GDPPC* values onto `hunan` sf data.frame by using `left_join()` of **dplyr** package.
+
+```{r}
+hunan <- left_join(hunan, lag_wm_qs.res)
+```
+
+To compare the values of lag GDPPC and Spatial window average, `kable()` of Knitr package is used to prepare a table using the code chunk below.
+
+```{r}
+hunan %>%
+  select("County", 
+         "lag GDPPC", 
+         "lag_window_avg GDPPC") %>%
+  kable()
+```
 
 
+Lastly, `qtm()` of **tmap** package is used to plot the `lag_gdppc` and `w_ave_gdppc` maps next to each other for quick comparison.
 
+```{r}
+#| fig-width: 10
+#| fig-height: 8
+w_avg_gdppc <- qtm(hunan, "lag_window_avg GDPPC")
+tmap_arrange(lag_gdppc, w_avg_gdppc, asp=1, ncol=2)
+```
 
+::: callout-tip
+## Tip
+For more effective comparison, it is advisable to use the core tmap mapping functions.
+:::
 
+### Spatial window sum
 
+The spatial window sum is the counter part of the window average, but without using row-standardized weights.
 
+To add the diagonal element to the neighbour list, we just need to use `include.self()` from **spdep**.
 
+```{r}
+wm_qs <- include.self(wm_q)
+wm_qs
+```
 
+Assigning binary weights to the neighbour structure that includes the diagonal element.
 
+```{r}
+b_weights <- lapply(wm_qs, function(x) 0*x + 1)
+b_weights[1]
+```
 
+> Notice that now [1] has six neighbours instead of five.
 
+Again, we use `nb2listw()` and `glist()` to explicitly assign weight values.
 
+```{r}
+b_weights2 <- nb2listw(wm_qs, 
+                       glist = b_weights, 
+                       style = "B")
+b_weights2
+```
 
+With our new weight structure, we can compute the lag variable with `lag.listw()`.
+
+```{r}
+w_sum_gdppc <- list(hunan$NAME_3, lag.listw(b_weights2, hunan$GDPPC))
+w_sum_gdppc
+```
+
+Next, we will convert the lag variable listw object into a data.frame by using `as.data.frame()`.
+
+```{r}
+w_sum_gdppc.res <- as.data.frame(w_sum_gdppc)
+colnames(w_sum_gdppc.res) <- c("NAME_3", "w_sum GDPPC")
+```
+
+Note: The second command line on the code chunk above renames the field names of *w_sum_gdppc.res* object into *NAME_3* and *w_sum GDPPC* respectively.
+
+Next, the code chunk below will be used to append *w_sum GDPPC* values onto `hunan` sf data.frame by using `left_join()` of dplyr package.
+
+```{r}
+hunan <- left_join(hunan, w_sum_gdppc.res)
+```
+
+Once again, `qtm()` of tmap package is used to plot the *lag_sum GDPPC* and *w_sum_gdppc* maps next to each other for quick comparison.
+
+```{r}
+#| fig-width: 8
+#| fig-height: 10
+w_sum_gdppc <- qtm(hunan, "w_sum GDPPC")
+tmap_arrange(lag_sum_gdppc, w_sum_gdppc, asp=1, ncol=2)
+```
+
+::: callout-note
+It is advisable to use the core tmap mapping functions for a more effective comparison.
+:::
+
+## References
+
+-   [Creating Neighbours using sf objects](https://cran.r-project.org/web/packages/spdep/vignettes/nb_sf.html)
 
 
 
